# cdk-data-pipeline

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements-dev.txt  run_make.bat  setup.py  tox.ini
.github/workflows/: ci.yml
data_pipeline/: athena_stack.py  etl_stack.py  glue_stack.py  iam_stack.py  lakeformation_stack.py  storage_stack.py
lambda_src/extractor/: app.py
